--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "start": "ember serve",
     "test": "npm-run-all lint:* test:*",
     "test:ember": "ember test",
-    "test:ember-compatibility": "ember try:each"
+    "test:ember-compatibility": "ember try:each",
+    "version": "auto-changelog -p && git add CHANGELOG.md"
   },
   "dependencies": {
     "@ember/render-modifiers": "^1.0.2",
@@ -35,6 +36,7 @@
     "@ember/optional-features": "^1.3.0",
     "@glimmer/component": "^1.0.1",
     "@glimmer/tracking": "^1.0.0",
+    "auto-changelog": "^2.2.1",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.6.0",
@@ -70,5 +72,11 @@
   "ember-addon": {
     "configPath": "tests/dummy/config",
     "demoURL": "https://maxwondercorn.github.io/ember-breakout/"
+  },
+  "auto-changelog": {
+    "output": "CHANGELOG.md",
+    "unreleased": true,
+    "commitLimit": false,
+    "sortCommits": "date"
   }
 }
